--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "openweather-apis": "^3.3.2",
+    "path": "^0.12.7",
     "rxjs": "^5.4.0",
     "zone.js": "^0.8.4"
   },
